Corregir acceso a lista en prueba de partidas